--- a/bc4grid-react/package.json
+++ b/bc4grid-react/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "dev": "node server.js"
+    "dev": "next dev"
   },
   "author": "",
   "license": "ISC",
@@ -15,9 +15,9 @@
     "ganache": "^7.9.1",
     "mocha": "^10.2.0",
     "next": "^12.2.2",
-    "next-routes": "^1.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "solc": "^0.8.15",
