--- a/bc4grid-next/package.json
+++ b/bc4grid-next/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "@truffle/hdwallet-provider": "^2.1.15",
     "ganache": "^7.9.1",
     "mocha": "^10.2.0",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "semantic-ui-css": "^2.5.0",
@@ -25,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
+    "prisma": "^5.6.0",
     "tailwindcss": "^3.3.0"
   }
 }
