--- a/bc4grid-next/package.json
+++ b/bc4grid-next/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
     "@truffle/hdwallet-provider": "^2.1.15",
     "ganache": "^7.9.1",
