--- a/bc4grid-next/package.json
+++ b/bc4grid-next/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
     "@truffle/hdwallet-provider": "^2.1.15",
+    "crypto-js": "^4.2.0",
     "ganache": "^7.9.1",
     "mocha": "^10.2.0",
     "next": "14.0.3",
