--- a/bc4grid-next/package.json
+++ b/bc4grid-next/package.json
@@ -13,7 +13,9 @@
     "@prisma/client": "^5.6.0",
     "@truffle/hdwallet-provider": "^2.1.15",
     "crypto-js": "^4.2.0",
+    "fs": "^0.0.1-security",
     "ganache": "^7.9.1",
+    "jsdom": "^23.0.1",
     "mocha": "^10.2.0",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
