--- a/bc4grid-next/package.json
+++ b/bc4grid-next/package.json
@@ -16,6 +16,7 @@
     "fs": "^0.0.1-security",
     "ganache": "^7.9.1",
     "jsdom": "^23.0.1",
+    "localforage": "^1.10.0",
     "mocha": "^10.2.0",
     "nanoid": "^5.0.4",
     "next": "14.0.3",
