--- a/bc4grid-next/package.json
+++ b/bc4grid-next/package.json
@@ -12,7 +12,10 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
     "@truffle/hdwallet-provider": "^2.1.15",
+    "chart.js": "^4.4.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "crypto-js": "^4.2.0",
+    "date-fns": "^3.2.0",
     "fs": "^0.0.1-security",
     "ganache": "^7.9.1",
     "jsdom": "^23.0.1",
@@ -22,6 +25,7 @@
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
