--- a/bc4grid-next/package.json
+++ b/bc4grid-next/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/adapter-pg": "^5.9.1",
     "@prisma/client": "^5.6.0",
     "@truffle/hdwallet-provider": "^2.1.15",
     "chart.js": "^4.4.1",
@@ -24,6 +25,7 @@
     "nanoid": "^5.0.4",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
