--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 services:
+
   sim1:
     build:
       context: ./smart-meter-simulator
@@ -6,16 +7,22 @@ services:
     environment:
       - SN=HG6789DS
       - CONSUMER=Consumer1
-      - SMART_COLLECTOR_BACKEND_URL=localhost:5000
+      - CONSUMER_FIRSTNAME=John
+      - CONSUMER_LASTNAME=Williams
+      - CONSUMER_EMAIL=somebody@gmail.com
+      - CONSUMER_PASSWORD=password
+      - SMART_COLLECTOR_BACKEND_URL=sdc:5000
       - DATA_DIR=./data
       - DATA_FILE=Dataset.xlsx
       - DATA_KEYS=Total Production,Total Consumption,AC,Dish washer,Washing Machine,Dryer,Water heater,TV,Microwave,Kettle,Lighting,Refrigerator
     volumes:
       - ./smart-meter-simulator:/root
-    entrypoint: ["python", "./src/send.py"]
+    entrypoint: ["sh", "./src/run.sh"]
     tty: true
     user: root
-    network_mode: host
+    depends_on:
+      sdc:
+        condition: service_healthy
   
   sim2:
     build:
@@ -26,45 +33,81 @@ services:
     environment:
       - SN=HG678K5F
       - CONSUMER=Consumer2
-      - SMART_COLLECTOR_BACKEND_URL=localhost:5000
+      - CONSUMER_FIRSTNAME=Henry
+      - CONSUMER_LASTNAME=Hamptom
+      - CONSUMER_EMAIL=somebody2@gmail.com
+      - CONSUMER_PASSWORD=password
+      - SMART_COLLECTOR_BACKEND_URL=sdc:5000
       - DATA_DIR=./data
       - DATA_FILE=Dataset.xlsx
       - DATA_KEYS=Total Production,Total Consumption,AC,Dish washer,Washing Machine,Dryer,Water heater,TV,Microwave,Kettle,Lighting,Refrigerator
-    entrypoint: ["python", "./src/send.py"]
+    entrypoint: ["sh", "./src/run.sh"]
     tty: true
     user: root
-    network_mode: host
-  
-  smart-data-collector:
+    depends_on:
+      sdc:
+        condition: service_healthy
+
+  sdc:
     build:
       context: ./smart-meter-collector
       dockerfile: ./Dockerfile
     working_dir: /app/smart-meter-collector/src
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=bc4grid
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - POSTGRES_DATABASE=smart-meter-collector
     volumes:
       - .:/app
     ports:
       - 5000:5000
     expose:
       - 5000
-    entrypoint: ["flask", "run"]
+    entrypoint: ["flask", "run", "--host=0.0.0.0"]
     tty: true
     user: root
-    network_mode: host
+    healthcheck:
+      test: curl --fail http://localhost:5000/check || exit 1
+      interval: 4s
+      timeout: 2s
+      retries: 3
+    depends_on:
+      - db
 
-    
+  frontend:
+    build:
+      context: ./bc4grid-next
+      dockerfile: ./Dockerfile
+    working_dir: /app
+    volumes:
+      - ./bc4grid-next:/app
+      - /app/node_modules
+    ports:
+      - 3000:3000
+    expose:
+      - 3000
+    entrypoint: ["npm", "run", "dev"]
+    tty: true
+    user: root
+    depends_on:
+      sdc:
+          condition: service_healthy
+      sim1:
+        condition: service_started
+      sim2:
+        condition: service_started
 
   db:
       image: postgres
       volumes:
         - postgres_data:/var/lib/postgresql/data/
       ports:
-        - 5432:5432
-      expose:
-        - 5432
-      network_mode: host
+        - '5432:5432'
       environment:
+        - POSTGRES_USER=postgres
         - POSTGRES_PASSWORD=bc4grid
-
 
 volumes:
   postgres_data:
