--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -88,7 +88,7 @@ services:
       - 3000:3000
     expose:
       - 3000
-    entrypoint: ["npm", "run", "dev"]
+    entrypoint: ["npm", "run", "start"]    
     tty: true
     user: root
     depends_on:
