--- a/bc4grid-next/package.json
+++ b/bc4grid-next/package.json
@@ -15,7 +15,7 @@
     "@truffle/hdwallet-provider": "^2.1.15",
     "chart.js": "^4.4.1",
     "chartjs-adapter-date-fns": "^3.0.0",
-    "crypto-js": "^4.2.0",
+    "crypto-js": "4.1.1",
     "date-fns": "^3.2.0",
     "fs": "^0.0.1-security",
     "ganache": "^7.9.1",
